central.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    email: support@stackrox.com
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"email":"support@stackrox.com","meta.helm.sh/release-name":"stackrox-central-services","meta.helm.sh/release-namespace":"stackrox","owner":"stackrox"},"labels":{"app":"central","app.kubernetes.io/component":"central","app.kubernetes.io/instance":"stackrox-central-services","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"stackrox","app.kubernetes.io/part-of":"stackrox-central-services","app.kubernetes.io/ [...]
    meta.helm.sh/release-name: stackrox-central-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
  creationTimestamp: "2023-09-26T14:29:23Z"
  generation: 4
  labels:
    app: central
    app.kubernetes.io/component: central
    app.kubernetes.io/instance: stackrox-central-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-central-services
    app.kubernetes.io/version: 4.2.x-234-g1b77ff4462-dirty
    helm.sh/chart: stackrox-central-services-400.2.0-234-g1b77ff4462-dirty
  name: central
  namespace: stackrox
  resourceVersion: "14421"
  uid: 508571f2-a20a-4fc6-abd2-4a961e57538a
spec:
  minReadySeconds: 15
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: central
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        email: support@stackrox.com
        meta.helm.sh/release-name: stackrox-central-services
        meta.helm.sh/release-namespace: stackrox
        owner: stackrox
        traffic.sidecar.istio.io/excludeInboundPorts: "8443"
      creationTimestamp: null
      labels:
        app: central
        app.kubernetes.io/component: central
        app.kubernetes.io/instance: stackrox-central-services
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: stackrox
        app.kubernetes.io/part-of: stackrox-central-services
        app.kubernetes.io/version: 4.2.x-234-g1b77ff4462-dirty
        helm.sh/chart: stackrox-central-services-400.2.0-234-g1b77ff4462-dirty
      namespace: stackrox
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: cloud.google.com/gke-preemptible
                operator: NotIn
                values:
                - "true"
            weight: 100
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/infra
                operator: Exists
            weight: 50
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/compute
                operator: Exists
            weight: 25
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/master
                operator: DoesNotExist
            weight: 100
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
            weight: 100
      containers:
      - command:
        - /stackrox/central-entrypoint.sh
        image: quay.io/stackrox-io/main:4.2.x-234-g1b77ff4462-dirty
        imagePullPolicy: IfNotPresent
        name: central
        ports:
        - containerPort: 8443
          name: api
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /v1/ping
            port: 8443
            scheme: HTTPS
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 1Gi
        securityContext:
          capabilities:
            drop:
            - NET_RAW
          readOnlyRootFilesystem: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /stackrox/central
          name: binary-central
        - mountPath: /var/log/stackrox/
          name: varlog
        - mountPath: /tmp
          name: central-tmp-volume
        - mountPath: /etc/ssl
          name: central-etc-ssl-volume
        - mountPath: /etc/pki/ca-trust
          name: central-etc-pki-volume
        - mountPath: /run/secrets/stackrox.io/certs/
          name: central-certs-volume
          readOnly: true
        - mountPath: /run/secrets/stackrox.io/default-tls-cert/
          name: central-default-tls-cert-volume
          readOnly: true
        - mountPath: /run/secrets/stackrox.io/htpasswd/
          name: central-htpasswd-volume
          readOnly: true
        - mountPath: /run/secrets/stackrox.io/jwt/
          name: central-jwt-volume
          readOnly: true
        - mountPath: /usr/local/share/ca-certificates/
          name: additional-ca-volume
          readOnly: true
        - mountPath: /run/secrets/stackrox.io/central-license/
          name: central-license-volume
          readOnly: true
        - mountPath: /var/lib/stackrox
          name: stackrox-db
        - mountPath: /etc/stackrox
          name: central-config-volume
        - mountPath: /run/secrets/stackrox.io/proxy-config/
          name: proxy-config-volume
          readOnly: true
        - mountPath: /etc/stackrox.d/endpoints/
          name: endpoints-config-volume
          readOnly: true
        - mountPath: /run/secrets/stackrox.io/db-password
          name: central-db-password
        - mountPath: /etc/ext-db
          name: central-external-db-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 4000
        runAsUser: 4000
      serviceAccount: central
      serviceAccountName: central
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /stackrox-local/bin/linux_amd64/central
          type: ""
        name: binary-central
      - emptyDir: {}
        name: varlog
      - emptyDir: {}
        name: central-tmp-volume
      - emptyDir: {}
        name: central-etc-ssl-volume
      - emptyDir: {}
        name: central-etc-pki-volume
      - name: central-certs-volume
        secret:
          defaultMode: 420
          secretName: central-tls
      - name: central-default-tls-cert-volume
        secret:
          defaultMode: 420
          optional: true
          secretName: central-default-tls-cert
      - name: central-htpasswd-volume
        secret:
          defaultMode: 420
          optional: true
          secretName: central-htpasswd
      - name: central-jwt-volume
        secret:
          defaultMode: 420
          items:
          - key: jwt-key.pem
            path: jwt-key.pem
          secretName: central-tls
      - name: additional-ca-volume
        secret:
          defaultMode: 420
          optional: true
          secretName: additional-ca
      - name: central-license-volume
        secret:
          defaultMode: 420
          optional: true
          secretName: central-license
      - configMap:
          defaultMode: 420
          name: central-config
          optional: true
        name: central-config-volume
      - name: proxy-config-volume
        secret:
          defaultMode: 420
          optional: true
          secretName: proxy-config
      - configMap:
          defaultMode: 420
          name: central-endpoints
        name: endpoints-config-volume
      - name: central-db-password
        secret:
          defaultMode: 420
          secretName: central-db-password
      - configMap:
          defaultMode: 420
          name: central-external-db
          optional: true
        name: central-external-db-volume
      - emptyDir: {}
        name: stackrox-db
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-09-26T15:27:38Z"
    lastUpdateTime: "2023-09-26T17:02:10Z"
    message: ReplicaSet "central-77bcdf456b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2023-09-26T17:16:31Z"
    lastUpdateTime: "2023-09-26T17:16:31Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
