kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: apollo
  namespace: stackrox
spec:
  ports:
  - name: api
    port: 443
    targetPort: 443
  selector:
    app: apollo
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: apollo
  namespace: stackrox
  labels:
    app: apollo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apollo
  template:
    metadata:
      namespace: stackrox
      labels:
        app: apollo
    spec:
      containers:
      - image: stackrox/apollo:latest
        imagePullPolicy: Always
        name: apollo
        ports:
        - name: api
          containerPort: 443
      imagePullSecrets:
      - name: stackrox
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: agent
  namespace: stackrox
  labels:
    app: agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent
  template:
    metadata:
      namespace: stackrox
      labels:
        app: agent
    spec:
      containers:
      - image: stackrox/apollo:latest
        imagePullPolicy: Always
        name: agent
        command:
          - kubernetes-agent
      imagePullSecrets:
      - name: stackrox
